@@ -6,26 +6,24 @@ import org.schabi.newpipe.extractor.services.peertube.PeertubeService;
 import org.schabi.newpipe.extractor.services.soundcloud.SoundcloudService;
 import org.schabi.newpipe.extractor.services.youtube.YoutubeService;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /*
- * Copyright (C) Christian Schabesberger 2018 <chris.schabesberger@mailbox.org>
- * ServiceList.java is part of NewPipe.
+ * Copyright (C) 2018 Christian Schabesberger <chris.schabesberger@mailbox.org>
+ * ServiceList.java is part of NewPipe Extractor.
  *
- * NewPipe is free software: you can redistribute it and/or modify
+ * NewPipe Extractor is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * NewPipe is distributed in the hope that it will be useful,
+ * NewPipe Extractor is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with NewPipe.  If not, see <http://www.gnu.org/licenses/>.
+ * along with NewPipe Extractor.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 /**
@@ -34,27 +32,21 @@ import java.util.List;
 @SuppressWarnings({"ConstantName", "InnerAssignment"}) // keep unusual names and inner assignments
 public final class ServiceList {
     private ServiceList() {
-        //no instance
+        // no instance
     }
 
-    public static final YoutubeService YouTube;
-    public static final SoundcloudService SoundCloud;
-    public static final MediaCCCService MediaCCC;
-    public static final PeertubeService PeerTube;
-    public static final BandcampService Bandcamp;
+    public static final YoutubeService YouTube = new YoutubeService(0);
+    public static final SoundcloudService SoundCloud = new SoundcloudService(1);
+    public static final MediaCCCService MediaCCC = new MediaCCCService(2);
+    public static final PeertubeService PeerTube = new PeertubeService(3);
+    public static final BandcampService Bandcamp = new BandcampService(4);
 
     /**
      * When creating a new service, put this service in the end of this list,
      * and give it the next free id.
      */
-    private static final List<StreamingService> SERVICES = Collections.unmodifiableList(
-            Arrays.asList(
-                    YouTube = new YoutubeService(0),
-                    SoundCloud = new SoundcloudService(1),
-                    MediaCCC = new MediaCCCService(2),
-                    PeerTube = new PeertubeService(3),
-                    Bandcamp = new BandcampService(4)
-            ));
+    private static final List<StreamingService> SERVICES = List.of(
+            YouTube, SoundCloud, MediaCCC, PeerTube, Bandcamp);
 
     /**
      * Get all the supported services.
